Fix problema quadrupla scelta schema.